--- a/style.css
+++ b/style.css
@@ -12,17 +12,17 @@ body {
     height: 100%;
 }
 
-#main{
+#main {
     width: 100%;
 }
 
-#home{
+#home {
     width: 100%;
     height: 100vh;
     background-color: black;
 }
 
-#nav{
+#nav {
     width: 100%;
     padding: 38px 50px;
     display: flex;
@@ -30,20 +30,20 @@ body {
     justify-content: space-between;
 }
 
-#nav a{
+#nav a {
     text-decoration: none;
     font-size: 20px;
 }
 
-#nav h4{
+#nav h4 {
     cursor: pointer;
 }
 
-#heading{
-    margin-top:60px;
+#heading {
+    margin-top: 60px;
 }
 
-#heading h1{
+#heading h1 {
     line-height: 1;
     opacity: .6;
     font-weight: 900;
@@ -53,27 +53,90 @@ body {
     margin-left: 50px;
 }
 
-#heading #secondh2{
+#heading #secondh2 {
     margin-left: 200px;
 }
 
-.blocktext{
+.blocktext {
     width: fit-content;
 }
 
-.blocktext h5{
+.blocktext h5 {
     text-align: right;
     text-transform: uppercase;
 }
 
-#smallheading{
+#smallheading {
     padding-right: 50px;
     text-align: right;
     margin-top: 100px;
-    line-height: 2;
+    line-height: 1.5;
     text-transform: uppercase;
 }
 
-#smallheading h5{
+#smallheading h5 {
     margin-top: .5vw;
+}
+
+#homefooter {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 3vw;
+    position: absolute;
+    bottom: 3%;
+    width: 100%;
+}
+
+#homefooter a {
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+#homefooter #iconset {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 5px;
+}
+
+#homefooter .circle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    background-color: #888;
+}
+
+#midd {
+    padding: 120px 8vw 0 3vw;
+    width: 100%;
+    height: 120vh;
+    background-color: black;
+}
+
+#element {
+    width: 100%;
+    padding: 3vw 3vw;
+    border-top: 1px solid #888;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-right: 0;
+}
+
+#element h1 {
+    text-transform: uppercase;
+    font-size: 6vw;
+    opacity: .6;
+}
+
+#element h5 {
+    font-size: 1vw;
+}
+
+.elementlast {
+    border-bottom: 1px solid #888;
 }
