--- a/style.css
+++ b/style.css
@@ -35,6 +35,15 @@ body {
     position: relative;
 }
 
+#bounding{
+    width: fit-content;
+    overflow: hidden;
+}
+
+#bounding .boundingElement{
+    transform: translateY(100%);
+}
+
 #nav {
     width: 100%;
     padding: 38px 50px;
@@ -72,6 +81,9 @@ body {
 
 .blocktext {
     width: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
 }
 
 .blocktext h5 {
@@ -80,6 +92,9 @@ body {
 }
 
 #smallheading {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
     padding-right: 50px;
     text-align: right;
     margin-top: 100px;
