--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
     color: white;
 }
 
+*::selection {
+    color: rgb(0, 0, 0);
+    background: rgb(255, 210, 218);
+}
+
 html,
 body {
     width: 100%;
@@ -20,7 +25,7 @@ body {
     position: absolute;
     z-index: 99;
     transition: all cubic-bezier(0.19, 1, 0.22, 1) .8s;
-    
+
 }
 
 #main {
@@ -35,12 +40,12 @@ body {
     position: relative;
 }
 
-#bounding{
+#bounding {
     width: fit-content;
     overflow: hidden;
 }
 
-#bounding .boundingElement{
+#bounding .boundingElement {
     transform: translateY(100%);
 }
 
@@ -141,6 +146,7 @@ body {
 
 
 #midd {
+    user-select: none;
     padding: 120px 8vw 0 3vw;
     width: 100%;
     height: 120vh;
@@ -191,6 +197,7 @@ body {
 }
 
 #imgabout img {
+    user-select: none;
     height: 200px;
     border-radius: 50%;
     background-size: cover;
@@ -201,6 +208,7 @@ body {
 }
 
 #txtabout h5 {
+    user-select: none;
     text-transform: uppercase;
     opacity: .6;
     padding-bottom: 10px;
@@ -213,6 +221,7 @@ body {
 }
 
 #txtabout button {
+    user-select: none;
     background-color: transparent;
     margin-top: 20px;
     padding: 5px 15px;
@@ -235,6 +244,7 @@ body {
 }
 
 #follow h5 {
+    user-select: none;
     text-transform: uppercase;
     opacity: .6;
     font-size: 10px;
@@ -279,28 +289,26 @@ body {
     text-decoration: none;
 }
 
-.underline{   
+.underline {
     position: relative;
     text-decoration: none;
 }
 
-.underline:after{
+.underline:after {
     content: "";
     position: absolute;
     background-color: #ff3c78;
-    height:3px;
+    height: 3px;
     width: 0;
-    left:0;
-    bottom: -8px;  
-    transition: .3s;     
+    left: 0;
+    bottom: -8px;
+    transition: .3s;
 }
 
-.underline:hover:after{   
+.underline:hover:after {
     width: 100%;
 }
 
-.underline:hover{   
+.underline:hover {
     color: beige;
 }
-
-
